fix(ui/search-btn): vertical alignment with input

--- a/src/style.css
+++ b/src/style.css
@@ -235,6 +235,10 @@ form > * + * {
   outline: 2px solid cyan;
 }
 
+.search-btn {
+  max-height: 3.23rem;
+}
+
 .words-input-btn {
   margin-left: auto;
 }
